--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="ninchat_colorPrimary">#242424</color>
     <color name="ninchat_colorPrimaryDark">#0D2230</color>
+    <color name="ninchat_colorPrimaryAlpha">#80242424</color>
     <color name="ninchat_colorAccent">#008aff</color>
     <color name="ninchat_activity_bottom_matter_background">#e9e9e9</color>
 </resources>
