--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -42,6 +42,12 @@
     <dimen name="ninchat_chat_activity_video_call_consent_button_outer_margin">23dp</dimen>
     <dimen name="ninchat_chat_activity_video_call_consent_button_inner_margin">20dp</dimen>
 
+    <dimen name="ninchat_chat_activity_close_chat_dialog_title_height">70dp</dimen>
+    <dimen name="ninchat_chat_activity_close_chat_dialog_button_width">180dp</dimen>
+    <dimen name="ninchat_chat_activity_close_chat_dialog_description_margin_top">20dp</dimen>
+    <dimen name="ninchat_chat_activity_close_chat_dialog_button_outer_margin">21dp</dimen>
+    <dimen name="ninchat_chat_activity_close_chat_dialog_button_inner_margin">8dp</dimen>
+
     <dimen name="ninchat_chat_activity_file_type_dialog_title_height">70dp</dimen>
     <dimen name="ninchat_chat_activity_file_type_dialog_button_width">180dp</dimen>
     <dimen name="ninchat_chat_activity_file_type_dialog_button_outer_margin">23dp</dimen>
