--- a/ninchatsdk/src/main/res/layout/activity_ninchat_media.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_media.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ninchat_colorPrimaryDark"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:onClick="onToggleTopBar">
 
     <ImageView
         android:id="@+id/ninchat_media_image"
@@ -12,8 +13,13 @@
         tools:src="@drawable/ninchat_logo"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:onClick="onToggleTopBar"
         android:layout_centerInParent="true"/>
+    
+    <VideoView
+        android:id="@+id/ninchat_media_video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
     <RelativeLayout
         android:id="@+id/ninchat_media_top"
