--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -66,12 +66,30 @@
                 android:layout_height="wrap_content"
                 tools:text="Message from agent" />
 
-            <ImageView
-                android:id="@+id/ninchat_chat_message_agent_image"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/ninchat_logo"
-                android:adjustViewBounds="true" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/ninchat_chat_message_agent_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:src="@drawable/ninchat_logo"
+                    android:background="@color/ninchat_colorPrimaryDark"
+                    android:adjustViewBounds="true" />
+                
+                <ImageView
+                    android:id="@+id/ninchat_chat_message_agent_video_play_image"
+                    android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_play"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
@@ -130,14 +148,31 @@
                 android:textColor="@android:color/white"
                 tools:text="Message from user"/>
 
-            <ImageView
-                android:id="@+id/ninchat_chat_message_user_image"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/ninchat_logo"
-                android:adjustViewBounds="true"
-                android:visibility="gone"
-                tools:visibility="visible" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/ninchat_chat_message_user_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:src="@drawable/ninchat_logo"
+                    android:adjustViewBounds="true"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+                <ImageView
+                    android:id="@+id/ninchat_chat_message_user_video_play_image"
+                    android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                    android:src="@drawable/ninchat_play"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
