--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -28,6 +28,7 @@
     <dimen name="ninchat_chat_activity_message_bubble_padding_vertical">12dp</dimen>
     <dimen name="ninchat_chat_activity_message_bubble_padding_horizontal">16dp</dimen>
     <dimen name="ninchat_chat_activity_message_bubble_margin_bottom">7dp</dimen>
+    <dimen name="ninchat_chat_activity_message_video_play_icon_size">42dp</dimen>
     <dimen name="ninchat_chat_activity_chat_ended_top_margin">26dp</dimen>
     <dimen name="ninchat_chat_activity_message_margin">5dp</dimen>
     <dimen name="ninchat_chat_activity_action_bar_padding">10dp</dimen>
