--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="android:colorAccent">@color/ninchat_colorAccent</item>
         <item name="android:textSize">@dimen/ninchat_text_size</item>
         <item name="android:textColor">@color/ninchat_colorPrimary</item>
+        <item name="android:linksClickable">true</item>
         <item name="android:autoLink">all</item>
         <item name="android:textColorLink">@color/ninchat_colorAccent</item>
         <item name="android:buttonStyle">@style/NinchatTheme.Button</item>
