--- a/ninchatsdk/src/main/res/drawable/ninchat_close.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_close.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="@color/ninchat_colorAccent"
-        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
+<vector android:height="24dp" android:viewportHeight="12"
+    android:viewportWidth="12" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/ninchat_colorAccent" android:pathData="M6,5.2l-5.18,-5.19l-0.82,0.82l5.18,5.18l-5.18,5.19l0.8,0.8l0.03,0l5.17,-5.17l5.17,5.17l0.03,0l0.8,-0.8l-5.18,-5.19l5.18,-5.18l-0.82,-0.82l-5.18,5.19z"/>
 </vector>
