--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -46,6 +46,18 @@
             android:layout_gravity="end">
 
             <ImageView
+                android:id="@+id/video_call"
+                android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
+                android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
+                android:src="@drawable/ninchat_video"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center_vertical"
+                android:scaleType="fitCenter"
+                android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <ImageView
                 android:id="@+id/attachment"
                 android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
                 android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
@@ -74,6 +86,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Send"
+                android:background="@drawable/ninchat_send_text_button"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:onClick="onSendClick"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/ninchat_colorAccent"
