--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -127,6 +127,41 @@
             android:layout_height="match_parent"
             android:layout_alignParentTop="true" />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true" >
+
+            <ImageView
+                android:id="@+id/video_on_off"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ninchat_camera_off"
+                android:layout_marginEnd="15dp"
+                android:onClick="onToggleVideo"/>
+
+            <ImageView
+                android:id="@+id/microphone_on_off"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ninchat_microphone_off"
+                android:layout_marginEnd="15dp"
+                android:onClick="onToggleMicrophone"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ninchat_video_hangup"
+                android:onClick="onVideoHangUp"/>
+
+        </LinearLayout>
+
     </RelativeLayout>
 
     <include
