Fix PDF attachment handling

--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -64,7 +64,8 @@
                 android:id="@+id/ninchat_chat_message_agent_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Message from agent" />
+                tools:text="Message from agent"
+                android:autoLink="none"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
