--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -156,9 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:src="@drawable/ninchat_logo"
-                    android:adjustViewBounds="true"
-                    android:visibility="gone"
-                    tools:visibility="visible" />
+                    android:adjustViewBounds="true" />
 
                 <ImageView
                     android:id="@+id/ninchat_chat_message_user_video_play_image"
